--- a/src/Modules/MasterModule/app.config
+++ b/src/Modules/MasterModule/app.config
@@ -15,6 +15,10 @@
         <assemblyIdentity name="System.Windows.Interactivity" publicKeyToken="31bf3856ad364e35" culture="neutral" />
         <bindingRedirect oldVersion="0.0.0.0-4.5.0.0" newVersion="4.5.0.0" />
       </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="iAnywhere.Data.SQLAnywhere.v4.5" publicKeyToken="f222fc4333e0d400" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-16.0.0.19484" newVersion="16.0.0.19484" />
+      </dependentAssembly>
     </assemblyBinding>
   </runtime>
 </configuration>
