--- a/test/KarveTest/KarveTest/app.config
+++ b/test/KarveTest/KarveTest/app.config
@@ -22,6 +22,10 @@
         <assemblyIdentity name="Microsoft.Expression.Interactions" publicKeyToken="31bf3856ad364e35" culture="neutral" />
         <bindingRedirect oldVersion="0.0.0.0-3.5.0.0" newVersion="3.5.0.0" />
       </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="iAnywhere.Data.SQLAnywhere.v4.5" publicKeyToken="f222fc4333e0d400" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-16.0.0.20434" newVersion="16.0.0.20434" />
+      </dependentAssembly>
     </assemblyBinding>
   </runtime>
   <startup>
