--- a/src/Modules/DALModule/KarveDataAccessLayer.csproj
+++ b/src/Modules/DALModule/KarveDataAccessLayer.csproj
@@ -112,6 +112,7 @@
     <Compile Include="Assist\IAssistResult.cs" />
     <Compile Include="ClientDataAccessLayer.cs" />
     <Compile Include="CommissionAgentAccessLayer.cs" />
+    <Compile Include="ConcreteDomainFactory.cs" />
     <Compile Include="DataDeleter.cs" />
     <Compile Include="DataLoader.cs" />
     <Compile Include="DataObjects\ACCESO.cs" />
