--- a/src/Modules/MasterModule/MasterModule.csproj
+++ b/src/Modules/MasterModule/MasterModule.csproj
@@ -85,7 +85,7 @@
       <HintPath>..\..\packages\MaterialDesignThemes.2.3.1.953\lib\net45\MaterialDesignThemes.Wpf.dll</HintPath>
     </Reference>
     <Reference Include="Microsoft.Expression.Interactions, Version=4.5.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
-      <HintPath>..\..\packages\Expression.Interaction.3.0.40218.0\lib\net46\Microsoft.Expression.Interactions.dll</HintPath>
+      <HintPath>..\..\packages\Expression.Blend.Sdk.WPF.1.0.1\lib\net45\Microsoft.Expression.Interactions.dll</HintPath>
       <Private>True</Private>
     </Reference>
     <Reference Include="Microsoft.Maps.MapControl.WPF, Version=1.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
@@ -189,7 +189,7 @@
     <Reference Include="System.Runtime.Serialization" />
     <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Windows.Interactivity, Version=4.5.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
-      <HintPath>..\..\packages\Expression.Interaction.3.0.40218.0\lib\net46\System.Windows.Interactivity.dll</HintPath>
+      <HintPath>..\..\packages\Expression.Blend.Sdk.WPF.1.0.1\lib\net45\System.Windows.Interactivity.dll</HintPath>
       <Private>True</Private>
     </Reference>
     <Reference Include="System.Xml" />
@@ -229,6 +229,9 @@
     <Compile Include="MasterModule.cs" />
     <Compile Include="ViewModels\ClientsControlViewModel.cs" />
     <Compile Include="ViewModels\ClientsInfoViewModel.cs" />
+    <Compile Include="ViewModels\DriversControlViewModel.cs" />
+    <Compile Include="ViewModels\HelperData.cs" />
+    <Compile Include="ViewModels\RightDetailViewModel.cs" />
     <Compile Include="ViewModels\UpperBarClientViewModel.cs" />
     <Compile Include="ViewModels\CommissionAgentControlViewModel.cs" />
     <Compile Include="Interfaces\ICommissionAgentView.cs" />
@@ -257,16 +260,16 @@
     <Compile Include="Views\Clients\ActivitySector.xaml.cs">
       <DependentUpon>ActivitySector.xaml</DependentUpon>
     </Compile>
-    <Compile Include="Views\Clients\AutorizationDate.xaml.cs">
-      <DependentUpon>AutorizationDate.xaml</DependentUpon>
-    </Compile>
     <Compile Include="Views\Clients\BillingDates.xaml.cs">
       <DependentUpon>BillingDates.xaml</DependentUpon>
     </Compile>
     <Compile Include="Views\Clients\ClientBilling.xaml.cs">
       <DependentUpon>ClientBilling.xaml</DependentUpon>
     </Compile>
-    <Compile Include="Views\Clients\DriverDataUserControl.xaml.cs">
+    <Compile Include="Views\Clients\CompanyDrivers.xaml.cs">
+      <DependentUpon>CompanyDrivers.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="Views\DriverDataUserControl.xaml.cs">
       <DependentUpon>DriverDataUserControl.xaml</DependentUpon>
     </Compile>
     <Compile Include="Views\Clients\GeneralInfoView.xaml.cs">
@@ -290,6 +293,13 @@
     <Compile Include="Views\CompaniesControlView.xaml.cs">
       <DependentUpon>CompaniesControlView.xaml</DependentUpon>
     </Compile>
+    <Compile Include="Views\DriversControlView.xaml.cs">
+      <DependentUpon>DriversControlView.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="Views\RightDetailView.xaml.cs">
+      <DependentUpon>RightDetailView.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="Views\SelectionBoxConverter.cs" />
     <Compile Include="Views\UpperBarViewSupplier.xaml.cs">
       <DependentUpon>UpperBarViewSupplier.xaml</DependentUpon>
     </Compile>
@@ -414,19 +424,19 @@
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
-    <Page Include="Views\Clients\AutorizationDate.xaml">
-      <SubType>Designer</SubType>
-      <Generator>MSBuild:Compile</Generator>
-    </Page>
     <Page Include="Views\Clients\BillingDates.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
     <Page Include="Views\Clients\ClientBilling.xaml">
+      <Generator>MSBuild:Compile</Generator>
+      <SubType>Designer</SubType>
+    </Page>
+    <Page Include="Views\Clients\CompanyDrivers.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
-    <Page Include="Views\Clients\DriverDataUserControl.xaml">
+    <Page Include="Views\DriverDataUserControl.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
@@ -463,6 +473,14 @@
       <Generator>MSBuild:Compile</Generator>
     </Page>
     <Page Include="Views\CompaniesControlView.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Views\DriversControlView.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Views\RightDetailView.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
@@ -742,6 +760,9 @@
   </ItemGroup>
   <ItemGroup>
     <Resource Include="Images\corporation.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Images\companydrivers.jpg" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <PropertyGroup>
