--- a/src/Modules/DALModule/KarveDataAccessLayer.csproj
+++ b/src/Modules/DALModule/KarveDataAccessLayer.csproj
@@ -65,6 +65,8 @@
     <Reference Include="DesignByContract, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
       <HintPath>..\..\packages\DesignByContract.1.0.1\lib\DesignByContract.dll</HintPath>
     </Reference>
+    <Reference Include="DevExpress.Data.v17.1, Version=17.1.7.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a, processorArchitecture=MSIL" />
+    <Reference Include="DevExpress.Xpo.v17.1, Version=17.1.7.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a, processorArchitecture=MSIL" />
     <Reference Include="DnsClient, Version=1.0.7.0, Culture=neutral, PublicKeyToken=4574bb5573c51424, processorArchitecture=MSIL">
       <HintPath>..\..\packages\DnsClient.1.0.7\lib\net45\DnsClient.dll</HintPath>
     </Reference>
@@ -79,10 +81,6 @@
     </Reference>
     <Reference Include="iAnywhere.Data.SQLAnywhere.v4.5, Version=16.0.0.19484, Culture=neutral, PublicKeyToken=f222fc4333e0d400, processorArchitecture=MSIL">
       <HintPath>..\..\packages\iAnywhere.Data.SQLAnywhere.v4.5.16.0.0.19484\lib\net45\iAnywhere.Data.SQLAnywhere.v4.5.dll</HintPath>
-    </Reference>
-    <Reference Include="KarveDapper, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\..\..\KarveDapper\obj\Debug\KarveDapper.dll</HintPath>
     </Reference>
     <Reference Include="MongoDB.Bson, Version=2.5.0.0, Culture=neutral, processorArchitecture=MSIL">
       <HintPath>..\..\packages\MongoDB.Bson.2.5.0\lib\net45\MongoDB.Bson.dll</HintPath>
@@ -133,10 +131,7 @@
     <Compile Include="CommissionAgentAccessLayer.cs" />
     <Compile Include="ConcreteDomainFactory.cs" />
     <Compile Include="Crud\Clients\ClientDataLoader.cs" />
-    <Compile Include="Crud\Clients\ClientDataSaver.cs" />
-    <Compile Include="Crud\Clients\ClientDeleter.cs" />
-    <Compile Include="Crud\Clients\ClientHelperData.cs" />
-    <Compile Include="Crud\Clients\DataLayerInvalidClientException.cs" />
+    <Compile Include="Crud\Clients\ClientHelper.cs" />
     <Compile Include="Crud\DataDeleter.cs" />
     <Compile Include="Crud\DataLoader.cs" />
     <Compile Include="DataObjects\ACCESO.cs" />
@@ -1122,7 +1117,6 @@
     <Compile Include="Logic\GenericDAL.cs" />
     <Compile Include="HelperDataAccessLayer.cs" />
     <Compile Include="Logic\MapperField.cs" />
-    <Compile Include="MapperUtils.cs" />
     <Compile Include="MarcasDAL.cs" />
     <Compile Include="Logic\SQL_EditDAL.cs" />
     <Compile Include="Model\CommissionAgent.cs" />
@@ -1131,6 +1125,7 @@
     <Compile Include="Model\DomainObject.cs" />
     <Compile Include="Model\MagnifierColumns.cs" />
     <Compile Include="Model\MagnifierSettings.cs" />
+    <Compile Include="Model\ModelWrapper.cs" />
     <Compile Include="Model\NullClient.cs" />
     <Compile Include="Model\NullCommissionAgentTypeData.cs" />
     <Compile Include="Model\Supplier.cs" />
@@ -1173,9 +1168,9 @@
     </None>
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\..\KarveCommonInterfaces\KarveCommonInterfaces.csproj">
-      <Project>{e9c77593-b656-45da-bae1-91af97491069}</Project>
-      <Name>KarveCommonInterfaces</Name>
+    <ProjectReference Include="..\..\..\KarveDapper\KarveDapper.csproj">
+      <Project>{082cb8c5-29d4-4d51-be0a-06deb8d7f871}</Project>
+      <Name>KarveDapper</Name>
     </ProjectReference>
     <ProjectReference Include="..\..\KarveCommon\KarveCommon.csproj">
       <Project>{49feb437-7f5a-4c7b-870c-a9bb5fc809fd}</Project>
@@ -1195,9 +1190,6 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Attributes\" />
-    <Folder Include="Crud\CommissionAgent\" />
-    <Folder Include="Crud\Suppliers\" />
-    <Folder Include="Crud\Vehicles\" />
     <Folder Include="DataAccessLayer\" />
     <Folder Include="Test\" />
   </ItemGroup>
